# climate-risk-quant

./: .dockerignore  .env.example  DEPLOY.md  Dockerfile  PORTFOLIO_BLURB.md  README.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/components/: metrics_row.py  sidebar.py
notebooks/: data_exploration.ipynb
src/: config.py
src/model/: artifacts.py  evaluate.py  pipeline.py  scorer.py  valuation.py
src/pipeline/: features.py  ingest.py  preprocess.py  validate.py
src/viz/: charts.py
tests/: test_model.py  test_pipeline.py
